# vibemetric

./: .aiderignore  .clinerules  .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  README.md  SCORING_GUIDE.md  SPEC.md  USAGE_GUIDE.md  pyproject.toml
.claude/: project-context.md
.github/: BRANCH_PROTECTION.md  CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  vibemetric.yml.example
.kiro/specs/vibe-scanner/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: vibemetric-development.md
src/vibe_scanner/: __init__.py  cli.py  file_analyzer.py  models.py  reporter.py  scanner.py  scorer.py  utils.py
src/vibe_scanner/detectors/: __init__.py  git_analyzer.py  pattern_detector.py  statistical_analyzer.py  style_analyzer.py
src/vibemetric/: __init__.py  cli.py  models.py  scorer.py
src/vibemetric/analyzers/: __init__.py
src/vibemetric/detectors/: __init__.py  artifact_detector.py  ml_detector.py  pattern_detector.py  velocity_analyzer.py
src/vibemetric/formatters/: __init__.py  sarif_formatter.py
src/vibemetric/integrations/: __init__.py  github_client.py  local_pr_analyzer.py  pr_analyzer.py
src/vibemetric/metrics/: __init__.py
src/vibemetric/ml/: __init__.py  feature_extractor.py
src/vibemetric/profiles/: __init__.py  developer_profile.py
src/vibemetric/reporters/: __init__.py
src/vibemetric/reports/: __init__.py  team_report.py
tests/: __init__.py  conftest.py  test_artifact_detector.py  test_detectors.py  test_developer_profile.py  test_file_discovery.py  test_integration.py  test_ml_detector.py  test_models.py  test_pattern_detector.py  test_pr_analyzer.py  test_sarif_formatter.py  test_scorer.py  test_velocity_analyzer.py
